hphp/test/slow/phpism/disable_static_local_variables.php.expectf
Fatal error: Static local variables are not supported in Hack in %s on line 5
